# ucsbl

./: .actrc  .envrc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  test-signing.sh  update.sh
.github/workflows/: build.yml
config/: arm-gcc.mk  arm-m4.mk  nrf52840-dk.mk  nrf52840-none.mk  nrf52840.ld  nrf52840.mk
doc/: BuildSetup.md  FaultInjection.md  GithubActions.md  Ideas.md  KeyGen.md  Misc.md  ReleaseTesting.md  SblIntegration.md  SblInternals.md  SblTool.md  Security.md  Signatures.md  Signing.md  SigningAuthority.md
prod-app/: afi.mk  app.ld  app.mki  efi.mk  main.c  mfi.mk
prod-libsbl/: libsbl.mk  sbl-nrf52840.c  sbl.c
prod-sbl/: main.c  sbl-dev.mk  sbl-rel.mk  sbl.ld  sbl.mki
src-nordic/: soup.txt
src-rfc8032/: README.md  rfc8032.c  rfc8032.h  sha512.c  sha512.h  soup.txt
src-rfc8032/private/: utils.h
src-uc/: abort.c  apputils.c  apputils.h  cb.c  cb.h  cbor.c  cbor.h  ch.c  ch.h  co.h  cobs.c  cobs.h  dwt.c  dwt.h  fault.c  fault.h  flash.c  flash.h  fwu.c  fwu.h  log.c  log.h  log.ld  noclear.c  noclear.h  nrfx_log.h  sbl.h  signature.h  ssp.c  uart.c  uart.h  utf8valid.h
tests/: test_cobs.py  test_fp.py  test_gf2.py  test_sss.py  test_zbase32.py
tools/: cobs.py  fp.py  fwu.py  gf2.py  ihex.py  logcmd.py  logconsole.py  logdata.py  mapsum.py  rel-test.py  sbl.py  sbom.py  sss.py  uclog.py  zbase32.py
tools/.sbl/: README.md
