[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SBL"
version = "1.0.0"
authors = [
  { name="Unit Circle Inc.", email="support@unitcircle.ca" },
]
description = "Secure Boot Loader code signing tool"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "cbor2>=5.6.5",
    "pexpect>=4.9.0",
    "pre-commit>=4.2.0",
    "puncover>=0.4.2",
    "pyelftools>=0.32",
    "pynacl>=1.5.0",
    "pyserial>=3.5",
    "ruff>=0.12.0",
    "tqdm>=4.67.1",
    "wheel>=0.45.1",
    #"qrcode",
    #"reportlab[pycairo]",
]

[tool.ruff.lint]
# On top of the defaults (`E4`, E7`, `E9`, and `F`), enable flake8-bugbear (`B`) and flake8-quotes (`Q`), and flake8-bandit (`S`).
select = ["E4", "E7", "E9", "F", "B", "Q", "S"]

[tool.hatch.build.targets.sdist]
include = [
  "tools/sbl.py",
  "tools/sss.py",
  "tools/gf2.py",
  "tools/zbase32.py",
  "tools/ihex.py",
  "tools/eff_short_wordlist_2_0.txt",
]

[tool.hatch.build.targets.wheel]
include = [
  "tools/sbl.py",
  "tools/sss.py",
  "tools/gf2.py",
  "tools/zbase32.py",
  "tools/ihex.py",
  "tools/eff_short_wordlist_2_0.txt",
]
